genetic algorithm implementation v 1.0
- improved algorithm implementation
- finished crossover functionality
- implemented mutation, search for 2nd parent in crossover
- some drafts of sending progress of asked generations,
- considering between Future-Promise OR/AND Publisher-Subscriber mechanisms