@@ -68,6 +68,7 @@
                     <compilerArgs>
                         <arg>--add-modules</arg>
                         <arg>jdk.incubator.vector</arg>
+                        <arg>--enable-preview</arg>
 <!--                        <arg>&#45;&#45;add-modules</arg>-->
 <!--                        <arg>jdk.incubator.foreign</arg>-->
                     </compilerArgs>
@@ -77,6 +78,13 @@
                     <failOnError>true</failOnError>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 
